avoided overflow dynamic due to animated bg

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -11,6 +11,7 @@ box-sizing: border-box;
 
 body{
     font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    overflow-x: hidden;
 }
 
 .header_container_size{
